--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,6 +22,7 @@
 /* From 1160px */
 /* From 1369px */
 /* From 1440px */
+/* Sizes */
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
   ========================================================================== */
@@ -534,6 +535,7 @@ span {
 .photographer-banner__location {
   font-size: 1.5rem;
   color: #901c1c;
+  margin-top: 1.5rem;
 }
 @media screen and (max-width: 992px) {
   .photographer-banner__location {
@@ -543,6 +545,7 @@ span {
 .photographer-banner__tagline {
   font-size: 1.125rem;
   color: #525252;
+  margin-top: 1.5rem;
 }
 @media screen and (max-width: 992px) {
   .photographer-banner__tagline {
@@ -607,6 +610,7 @@ span {
 }
 .like-button__number-of-likes {
   font-size: 1.5rem;
+  font-weight: bold;
   color: #901c1c;
 }
 .like-button__icon {
@@ -877,7 +881,7 @@ span {
 }
 
 #photographer-gallery {
-  margin: 70px 100px;
+  margin: 100px;
 }
 
 .photographer-gallery {
