Add contact form css

--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -55,6 +55,7 @@ $line-height: 1.5;
 $white: #FFF;
 $black: #000;
 $grey: #525252;
+$formColor: #312E2E;
 $lightGrey: #fafafa;
 $mouseGrey: #c4c4c4;
 $mediumGrey: #757575;
