--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,7 +22,6 @@
 /* From 1160px */
 /* From 1369px */
 /* From 1440px */
-/* Sizes */
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
   ========================================================================== */
@@ -781,6 +780,65 @@ span {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+}
+
+form {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  width: 100%;
+}
+form label {
+  font-size: 2rem;
+  color: #312E2E;
+}
+@media screen and (max-width: ) {
+  form label {
+    font-szie: 2rem;
+  }
+}
+@media screen and (max-width: 1160px) {
+  form label {
+    font-size: 1.5rem;
+  }
+}
+@media screen and (max-width: 699px) {
+  form label {
+    font-size: 1.5rem;
+  }
+}
+@media screen and (max-width: 599px) {
+  form label {
+    font-size: 1.375rem;
+  }
+}
+
+.contactData {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-bottom: 10px;
+}
+.contactData__email {
+  margin-bottom: 12px;
+}
+@media screen and (max-width: 1160px) {
+  .contactData__email {
+    margin-bottom: 22px;
+  }
+}
+.contactData__message {
+  font-size: 1.5rem;
+  line-height: 1.5;
+  margin: 0.5rem 0 0;
+  color: #000;
+  background-color: transparent;
+  text-align: left;
+}
+@media screen and (max-width: 1160px) {
+  .contactData__message {
+    font-size: 1rem;
+  }
 }
 
 /* HOMEPAGE BODY */
