--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 
 @import "./animations/loader";
 @import "./animations/cardEffect";
+@import "./animations/formEffect";
 
 @import './components/screenReaderAccess';
 @import './components/logo';
