--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,7 +13,7 @@
 @import './components/logo';
 @import './components/photographerBanner';
 @import './components/button';
-@import './components/selectMenu';
+@import './components/dropDown';
 @import './components/cardInsert';
 @import './components/mediaCard';
 @import './components/lightBox';
