Add contact form accessibility

--- a/sass/components/_contactForm.scss
+++ b/sass/components/_contactForm.scss
@@ -2,7 +2,7 @@
     background-color: rgba(0,0,0,.7);
     align-items: flex-start;
     width: 100vw;
-    height: 100vw;
+    height: 100vh;
     position: fixed;
     display: none;
     top: 0;
