--- a/sass/components/_dropDown.scss
+++ b/sass/components/_dropDown.scss
@@ -1,10 +1,7 @@
 .select-menu {
-    display: flex;
-    position: relative;
     width: auto;
     margin: 50px 100px;
     font-size: 1.125rem;
-    font-weight: bold;
     align-items: center;
     justify-content: flex-start;
     flex-direction: row; 
@@ -22,16 +19,16 @@
     width: 10.625rem;
     height: 4.3125rem;
     position: relative;
+    display: inline-block;
     line-height: 1.5;
 
     &__button {
         transition: color 0.6s;
         transition: background-color 0.6s;
-        display: inline-flex;
         width: 100%;
         border: none;
         font-weight: bold;
-        border-radius: 5px; 
+        border-radius: 5px;
         background-color: $primary-color;
         cursor: pointer;
         -webkit-user-select: none;
@@ -47,11 +44,15 @@
 
         &:focus {
             outline: $orange-light thin dashed;
+            border-bottom-left-radius: 0px;
+            border-bottom-right-radius: 0px;
 
         }
 
         &:focus-visible {
             outline: thin dotted;
+            border-bottom-left-radius: 0px;
+            border-bottom-right-radius: 0px;
         }
 
         &:hover, 
@@ -60,36 +61,41 @@
             background-color: $orange-light;
         }
 
-    }
+        &__arrow-icon {
+            padding-top: 0.5rem;
+            padding-left: 0.1rem;
+            align-items: center;
+        }
 
-    &__arrow {
-        font-weight: 900;
-        font-family: "FontAwesome 6 Free";
     }
 }
 
-.dropDownMenu {
+.dropdown-content {
     display: none;
+    transition: color 0.6s;
+    transition: background-color 0.6s;
     position: absolute;
     background-color: $primary-color;
+    min-width: 10.625rem;
+    min-height: 4.3125rem;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
     z-index: 1;
+    align-items: center;
+    justify-content: space-between; 
     
-    &a {
+    & a {
         display: block;
         text-decoration: none;
-        align-items: center;
-        justify-content: space-between;
         background-color: $primary-color;
         font-size: 1.175rem;
         color: $white;
         padding: 1.5rem 1.25rem 1.5rem 1.25rem;
-        transition: color 0.6s;
-        transition: background-color 0.6s;
-        display: inline-flex;
         width: 100%;
         border: none;
         font-weight: bold;
-        border-radius: 5px; 
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
         background-color: $primary-color;
         cursor: pointer;
         -webkit-user-select: none;
@@ -103,6 +109,13 @@
         }
         
     }
+}
+
+#date {
+    align-items: center;
+   &:hover {
+       border-radius: 0px;
+   }
 }
 
 .show {
