--- a/public/main.css
+++ b/public/main.css
@@ -440,12 +440,22 @@ span {
   transform: scale(1.1);
 }
 
-@-webkit-keyframes slide-up {
+@-webkit-keyframes modalopen {
   from {
-    transform: translateY(25%);
+    opacity: 0;
+    transform: translateY(-150px);
   }
   to {
-    transform: translateY(0%);
+    opacity: 1;
+  }
+}
+@keyframes modalopen {
+  from {
+    opacity: 0;
+    transform: translateY(-150px);
+  }
+  to {
+    opacity: 1;
   }
 }
 .sr-container {
@@ -843,30 +853,29 @@ span {
 }
 
 #contact-form {
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(244, 244, 244, 0.6);
   align-items: flex-start;
-  width: 100vw;
-  height: 100vh;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
   position: fixed;
   display: none;
   top: 0;
+  left: 0;
+  overflow: auto;
 }
 
 .form-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+  align-self: center;
   padding: 1.5rem 2rem 2.2rem;
   margin: 13% auto;
-  width: 50%;
-  max-width: 720px;
+  width: 750px;
+  max-width: 67rem;
+  max-height: 80rem;
   border-radius: 0.3125rem;
-  height: 58rem;
-  position: relative;
   background-color: #db8876;
-  -webkit-animation: slide-up 0.3s ease-in;
-  animation: slide-up 0.3s ease-in;
+  -webkit-animation: modalopen 1s;
+  animation: modalopen 1s;
 }
 
 .form-header {
@@ -879,17 +888,18 @@ span {
 .form-header__heading {
   margin-bottom: 1.2rem;
   text-align: left;
-  font-size: 2.8rem;
+  font-size: 3rem;
   color: #000;
 }
 .form-header__close {
   color: #FFF;
-  font-size: 5rem;
+  margin-top: 1rem;
   border: none;
   cursor: pointer;
+  background-color: #db8876;
 }
 .form-header__close:hover:focus {
-  transform: scale(0.7);
+  transform: scale(1.2);
 }
 
 form {
@@ -938,9 +948,6 @@ form label {
   padding: 1rem;
   border: none;
   border-radius: 0.3125rem;
-}
-.contactData__email {
-  margin-bottom: 12px;
 }
 @media screen and (max-width: 1160px) {
   .contactData__email {
