--- a/sass/components/_contactForm.scss
+++ b/sass/components/_contactForm.scss
@@ -1,29 +1,28 @@
 #contact-form {
-    background-color: rgba(0,0,0,.7);
+    background-color: rgba(244, 244, 244, 0.6);
     align-items: flex-start;
-    width: 100vw;
-    height: 100vh;
+    justify-content: center;
+    width: 100%;
+    height: 100%; 
     position: fixed;
     display: none;
     top: 0;
+    left: 0;
+    overflow: auto;
 
 }
 
 .form-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+    align-self: center;
     padding: 1.5rem 2rem 2.2rem;
     margin: 13% auto;
-    width: 50%;
-    max-width: 720px;
+    width: 750px;
+    max-width: 67rem;
+    max-height: 80rem;
     border-radius: 0.3125rem;
-    height: 58rem;
-    position: relative;
     background-color: $orange-light;
-    -webkit-animation: slide-up 0.3s ease-in;
-            animation: slide-up 0.3s ease-in;
+    -webkit-animation: modalopen 1s;
+            animation: modalopen 1s;
 }
 
 .form-header {
@@ -36,18 +35,19 @@
     &__heading {
         margin-bottom: 1.2rem;
         text-align: left;
-        font-size: 2.8rem;
+        font-size: 3rem;
         color: $black;
     }
 
     &__close {
         color: $white;
-        font-size: 5rem;
+        margin-top: 1rem;
         border: none;
         cursor: pointer;
+        background-color: $orange-light;
         
         &:hover:focus {
-            transform: scale(0.7);
+            transform: scale(1.2);
         }
     }
 }
@@ -95,7 +95,6 @@ form {
     }
 
     &__email {
-        margin-bottom: 12px;
         
         @include mediumDesktop {
             margin-bottom: 22px;
