--- a/public/main.css
+++ b/public/main.css
@@ -854,24 +854,24 @@ span {
 
 #contact-form {
   background-color: rgba(244, 244, 244, 0.6);
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   position: fixed;
-  display: none;
   top: 0;
   left: 0;
   overflow: auto;
+  flex-direction: column;
 }
 
 .form-content {
-  align-self: center;
+  align-items: center;
   padding: 1.5rem 2rem 2.2rem;
   margin: 13% auto;
   width: 750px;
   max-width: 67rem;
-  max-height: 80rem;
+  max-height: 90rem;
   border-radius: 0.3125rem;
   background-color: #db8876;
   -webkit-animation: modalopen 1s;
@@ -957,7 +957,6 @@ form label {
 .contactData__message {
   font-size: 1.5rem;
   line-height: 1.5;
-  margin: 0.5rem 0 0;
   color: #000;
   background-color: transparent;
   text-align: left;
@@ -993,6 +992,10 @@ form label {
   .text-area {
     max-height: 5rem;
   }
+}
+
+.no-scroll {
+  overflow: hidden;
 }
 
 /* HOMEPAGE BODY */
