--- a/sass/components/_contactForm.scss
+++ b/sass/components/_contactForm.scss
@@ -15,8 +15,8 @@
 
 .form-content {
     align-items: center;
-    padding: 1.5rem 2rem 2.2rem;
-    margin: 13% auto;
+    padding: .5rem 2rem 2rem;
+    margin: .5rem auto;
     width: 750px;
     max-width: 67rem;
     max-height: 90rem;
