--- a/sass/components/_dropDown.scss
+++ b/sass/components/_dropDown.scss
@@ -1,10 +1,21 @@
 .select-menu {
+    display: flex;
     width: auto;
     margin: 50px 100px;
     font-size: 1.125rem;
     align-items: center;
     justify-content: flex-start;
     flex-direction: row; 
+
+    @include tablette {
+        margin: 1.2rem 4.375rem 0;
+        font-size: 0.895rem;
+    }
+
+    @include mediumMobileLandscape {
+        margin: 1.25rem 1rem 0;
+        justify-content: center;
+    }
 
     &__label {
         margin-right: 1rem;
@@ -16,13 +27,13 @@
 }
 
 .dropDown {
-    width: 10.625rem;
-    height: 4.3125rem;
+    width: 10.5rem;
+    height: 4.3rem;
     position: relative;
-    display: inline-block;
     line-height: 1.5;
 
     &__button {
+        display: flex;
         transition: color 0.6s;
         transition: background-color 0.6s;
         width: 100%;
@@ -40,7 +51,7 @@
         background-color: $primary-color;
         font-size: 1.175rem;
         color: $white;
-        padding: 1.5rem 1.25rem 1.5rem 1.25rem;
+        padding: 1.4375rem 1.125rem 1.4375rem 1.25rem;
 
         &:focus {
             outline: $orange-light thin dashed;
@@ -60,13 +71,6 @@
             color: $black;
             background-color: $orange-light;
         }
-
-        &__arrow-icon {
-            padding-top: 0.5rem;
-            padding-left: 0.1rem;
-            align-items: center;
-        }
-
     }
 }
 
@@ -76,8 +80,8 @@
     transition: background-color 0.6s;
     position: absolute;
     background-color: $primary-color;
-    min-width: 10.625rem;
-    min-height: 4.3125rem;
+    min-width: 10.5rem;
+    min-height: 4.3rem;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     z-index: 1;
@@ -85,6 +89,8 @@
     justify-content: space-between; 
     
     & a {
+        border-top: 2px solid;
+        border-color: $white;
         display: block;
         text-decoration: none;
         background-color: $primary-color;
@@ -92,7 +98,6 @@
         color: $white;
         padding: 1.5rem 1.25rem 1.5rem 1.25rem;
         width: 100%;
-        border: none;
         font-weight: bold;
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
@@ -106,6 +111,8 @@
         :focus {
         color: $black;
         background-color: $orange-light;
+
+
         }
         
     }
@@ -113,7 +120,7 @@
 
 #date {
     align-items: center;
-   &:hover {
+    &:hover {
        border-radius: 0px;
    }
 }
