--- a/sass/pages/_homePage.scss
+++ b/sass/pages/_homePage.scss
@@ -104,6 +104,8 @@
 
     &__tagline {
         font-size: 1rem;
+        align-items: center;
+        justify-content: center;
         margin-bottom: 0.3rem;
     }
 
