Fixed drop down menu errors

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -644,21 +644,13 @@ span {
 }
 
 .dropDownMenu {
-  display: flex;
-  margin: 50px 100px;
+  margin: 0 100px;
+  display: block;
   font-size: 1.125rem;
-  align-items: baseline;
 }
 @media screen and (max-width: 992px) {
   .dropDownMenu {
-    margin: 1.2rem 4.375rem 0;
     font-size: 0.895rem;
-  }
-}
-@media screen and (max-width: 599px) {
-  .dropDownMenu {
-    margin: 1.25rem 1rem 0;
-    justify-content: center;
   }
 }
 @media screen and (max-width: 480px) {
@@ -667,8 +659,6 @@ span {
   }
 }
 .dropDownMenu span {
-  display: flex;
-  margin-right: 1rem;
   font-weight: bold;
   font-size: 20px;
   color: #000;
@@ -679,67 +669,69 @@ span {
   align-items: baseline;
 }
 
-#dropDownMenu__wrapper {
+.dropDownMenu__button-wrapper {
   position: relative;
 }
 
-#dropDownBtn {
-  width: 10.5rem;
-  height: 4.3rem;
-  position: relative;
+.dropDownBtn {
+  width: 170px;
+  border-radius: 5px;
+  line-height: 1.4375rem;
+  border: none;
+  margin-left: 22px;
+  height: 70px;
+  text-align: left;
+  padding: 0 20px;
+  cursor: pointer;
   transition: color 0.6s;
   transition: background-color 0.6s;
-  border: none;
-  border-radius: 5px;
   font-weight: bold;
   background-color: #901c1c;
   cursor: pointer;
   font-size: 1.175rem;
   color: #FFF;
-  padding: 1.4375rem 2.125rem 1.4375rem 0rem;
 }
-#dropDownBtn:focus {
+.dropDownBtn:focus {
   outline: #db8876 thin dashed;
-  border-bottom-left-radius: 0px;
-  border-bottom-right-radius: 0px;
 }
-#dropDownBtn:focus-visible {
+.dropDownBtn:focus-visible {
   outline: thin dotted;
-  border-bottom-left-radius: 0px;
-  border-bottom-right-radius: 0px;
 }
-#dropDownBtn:hover,
-#dropDownBtn :focus {
+.dropDownBtn:hover,
+.dropDownBtn :focus {
   color: #000;
   background-color: #db8876;
 }
 
-#chevron-down-icon {
-  height: 16px;
+#chevron-icon {
+  height: 17px;
   width: 20px;
   position: absolute;
   pointer-events: none;
   right: 18px;
   top: 28px;
-  z-index: 2;
+  z-index: 300;
   transition-duration: 0.5s;
 }
 
-#myDropDownList {
+.dropDownList {
   display: none;
-  transition: color 0.6s;
   z-index: 1;
   transition: background-color 0.6s;
-  position: absolute;
-  top: -5px;
   background-color: #901c1c;
-  width: 10.5rem;
+  width: 170px;
   border-radius: 5px;
   border: 5px solid #901c1c;
+  position: relative;
+  left: 15px;
+  top: 0px;
+}
+
+.sort-list {
+  display: block;
 }
 
 [role=option] {
-  display: block;
   border: none;
   background-color: #901c1c;
   font-size: 1.175rem;
@@ -748,6 +740,7 @@ span {
   width: 100%;
   font-weight: bold;
   cursor: pointer;
+  text-align: left;
 }
 [role=option]:hover,
 [role=option] :focus {
@@ -775,11 +768,11 @@ span {
   color: #000;
 }
 
-#selectPopularity {
+[data-id=popularity] {
   border-radius: 5px 5px 0 0;
 }
 
-#selectTitle {
+[data-id=title] {
   border-radius: 0 0 5px 5px;
 }
 
