--- a/sass/components/_dropDown.scss
+++ b/sass/components/_dropDown.scss
@@ -1,17 +1,10 @@
 .dropDownMenu {
-    display: flex;
-    margin: 50px 100px;
+    margin: 0 100px;
+    display: block;
     font-size: 1.125rem;
-    align-items: baseline;
 
     @include tablette {
-        margin: 1.2rem 4.375rem 0;
         font-size: 0.895rem;
-    }
-
-    @include mediumMobileLandscape {
-        margin: 1.25rem 1rem 0;
-        justify-content: center;
     }
 
     @include largeMobile {
@@ -19,8 +12,6 @@
     }
 
     & span {
-        display: flex;
-        margin-right: 1rem;
         font-weight: bold;
         font-size: 20px;
         color: $black;
@@ -32,36 +23,36 @@
     align-items: baseline;
 }
 
-#dropDownMenu__wrapper {
+.dropDownMenu__button-wrapper {
     position: relative;
 }
 
-#dropDownBtn {
-    width: 10.5rem;
-    height: 4.3rem;
-    position: relative;
+.dropDownBtn {
+    width: 170px;
+    border-radius: 5px;
+    line-height: 1.4375rem;
+    border: none;
+    margin-left: 22px;
+    height: 70px;
+    text-align: left;
+    padding: 0 20px;
+    cursor: pointer;
     transition: color 0.6s;
     transition: background-color 0.6s;
-    border: none;
-    border-radius: 5px;
     font-weight: bold;
     background-color: $primary-color;
     cursor: pointer;
     font-size: 1.175rem;
     color: $white;
-    padding: 1.4375rem 2.125rem 1.4375rem 0rem;
 
     &:focus {
         outline: $orange-light thin dashed;
-        border-bottom-left-radius: 0px;
-        border-bottom-right-radius: 0px;
 
     }
 
     &:focus-visible {
         outline: thin dotted;
-        border-bottom-left-radius: 0px;
-        border-bottom-right-radius: 0px;
+
     }
 
     &:hover, 
@@ -71,32 +62,36 @@
     }
 }
 
-#chevron-down-icon {
-    height: 16px;
+#chevron-icon {
+    height: 17px;
     width: 20px;
     position: absolute;
     pointer-events: none;
     right: 18px;
     top: 28px;
-    z-index: 2;
+    z-index: 300;
     transition-duration: 0.5s;
 }
 
-#myDropDownList {
+.dropDownList {
     display: none;
-    transition: color 0.6s;
     z-index: 1;
     transition: background-color 0.6s;
-    position: absolute;
-    top: -5px;
     background-color: $primary-color;
-    width: 10.5rem;
+    width: 170px;
     border-radius: 5px;
     border: 5px solid $primary-color;
+    position: relative;
+    left: 15px;
+    top: 0px;
+}
+
+
+.sort-list {
+    display: block;
 }
 
 [role="option"] {
-    display: block;
     border: none;
     background-color: $primary-color;
     font-size: 1.175rem;
@@ -105,6 +100,7 @@
     width: 100%;
     font-weight: bold;
     cursor: pointer;
+    text-align: left;
     
     &:hover, 
     :focus {
@@ -135,11 +131,11 @@
     color: $black;
 }
 
-#selectPopularity {
+[data-id="popularity"] {
     border-radius: 5px 5px 0 0;
 }
 
 
-#selectTitle {
+[data-id="title"] {
     border-radius: 0 0 5px 5px;
 }
